--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,6 @@
 #pattern  filter=crypt diff=crypt merge=crypt
 .env.test1 filter=crypt diff=crypt merge=crypt
+debug.keystore filter=crypt diff=crypt merge=crypt
+test.keystore filter=crypt diff=crypt merge=crypt
+google-services.json filter=crypt diff=crypt merge=crypt
+Info.plist filter=crypt diff=crypt merge=crypt
