--- a/Info.plist
+++ b/Info.plist
@@ -1,16 +1,24 @@
-U2FsdGVkX18pp1ttvU85O+RIKnfKmWT/z3X0uOt88Fnk5i6uK6hKdOhW+gfxH6M2
-agCLe9XmcE+Do/VdeaMHCOUO5HUMe+JkH7JYTw6T1xKET1iYjAO05Rf3kMXm9l4g
-6vVjsvne/GNT2jNxaZvJBPN0KMmY6861aJFQc4iqebWoPTspfm3EKuCYmnfzRvej
-6iK5bL/gr/vhJ737Ccp7JOQTErfWihj5i0DSNPyaRID7pJ7H4+27MFmdb9nx2+m5
-K/49OA6NOQ+/v3zLEKNFrU6RAzbfTI4R4aG5TTrmlzSMMCzlOKufavq7CthPXwFG
-bqsw3YGcIw3heZ6jsLqLYGryYNmqZGD0DUKuJpK2NqjhNgKLhnBDEx+ICQ+Tj1Qw
-O4LXZ0/E7MojxXd9EpmS/KW2WPLD0JIFWYtjAmmaFDKY94YIeEFJpnyruzjtcgwx
-BE5dn/Ifyjp3RDyM62M/exfTUqQlEvwIKNWWX0MZlouXKsYVQFHo51QStTtRWTl3
-eHOEHOTGnIoO38Ywfd6M+O7oHkXKMg7k2SUGh8YRPKq94L4DwzlhDm0e5xYzWHPr
-pqU2Wzy4WrhNc5+ppSeExhqxHnaVaPRVf8p//U17f8WJe2wVE92NTyktqZ2Pr+0H
-s9kslXGXZAMupcOK/CG2YcKb/9lKA2Rfml2CrUskQP8XcYgbchvPbb/OVAbPL0Vd
-zScbESGLWe2/NqnqMEUi8Noq3tT2lGPDeRy6j0fSwuNqwoXFuDhvFTg80gXzRV9p
-+b5XHaVJnxx5+bILKnzBRe1QSN91/gvML4W/kMFmDmOpNMHXghesM+dOgz1fJT4M
-NPAacEelNIIGkA6tdZY58lU8Yj3osAuIOtvXpvziaeKWZrxdvp/cfRUylP71a2HM
-x/AjYWrljuCzetjhjsKY3ZMcQBTFUpz7mpRKK3nuz/LMIU7+K0iGIIhRsSYt8XPC
-pep8h7CwbmmcksZaSw4xhSEVgZFig+HV/k16MYoxx5U=
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<plist version="1.0">
+<dict>
+	<key>CFBundleDevelopmentRegion</key>
+	<string>en</string>
+	<key>CFBundleExecutable</key>
+	<string>$(EXECUTABLE_NAME)</string>
+	<key>CFBundleIdentifier</key>
+	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
+	<key>CFBundleInfoDictionaryVersion</key>
+	<string>6.0</string>
+	<key>CFBundleName</key>
+	<string>$(PRODUCT_NAME)</string>
+	<key>CFBundlePackageType</key>
+	<string>BNDL</string>
+	<key>CFBundleShortVersionString</key>
+	<string>1.0</string>
+	<key>CFBundleSignature</key>
+	<string>????</string>
+	<key>CFBundleVersion</key>
+	<string>1</string>
+</dict>
+</plist>
